--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,10 +6,11 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "beautifulsoup4>=4.14.2",
-    "langchain>=1.0.5",
-    "langchain-google-genai>=3.0.2",
-    "langchain-google-vertexai>=3.0.3",
-    "langchain-openai>=1.0.2",
+    "langchain>=1.1.0",
+    "langchain-classic>=1.0.0",
+    "langchain-google-genai>=3.2.0",
+    "langchain-openai>=1.1.0",
+    "langchain-text-splitters>=1.0.0",
     "pypdf>=6.2.0",
     "python-dotenv>=1.2.1",
 ]
