--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,9 +8,11 @@ dependencies = [
     "beautifulsoup4>=4.14.2",
     "langchain>=1.1.0",
     "langchain-classic>=1.0.0",
+    "langchain-community>=0.4.1",
     "langchain-google-genai>=3.2.0",
     "langchain-openai>=1.1.0",
     "langchain-text-splitters>=1.0.0",
+    "langgraph>=1.0.3",
     "pypdf>=6.2.0",
     "python-dotenv>=1.2.1",
 ]
